--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <!--Este es el formulario-->
     <div class="form-wrapper">
-      <form action="https://formspree.io/f/tu-correo" method="POST" class="form-container">
+      <form action="https://formspree.io/f/mpwqkaej" method="POST" class="form-container">
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
           <input type="email" class="form-control" name="email" placeholder="name@example.com" required>
