--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wardiere Inc.</title>
+  <title>Silver Tech.</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
@@ -14,16 +14,16 @@
   <!--Aqui empieza el navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Wardiere Inc.</a>
+      <a class="navbar-brand" href="#">Saúl Briceño</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Price</a></li>
-          <li class="nav-item"><a class="btn btn-outline-light ms-3" href="#">Start for free</a></li>
+          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About Me</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://tublog.com" target="_blank">Blog</a></li>
         </ul>
       </div>
     </div>
@@ -31,88 +31,76 @@
 
   <!--Aqui viene la seccion hero-->
   <section class="hero-section text-center text-lg-start">
-    <div class="container">
+    <div class="container" id="home">
       <div class="row align-items-center">
         <div class="col-lg-6">
-          <h1>Increase your Business with us!</h1>
-          <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua.</p>
-          <a href="#" class="btn btn-custom mt-3">CONTACT US</a>
+          <h1>Hola, soy Saúl</h1>
+          <p class="mt-3">Soy un programador. Apasionado por la tecnología, con experiencia en solucionar problemas mediante el software.</p>
+          <a href="#contacto" class="btn btn-custom mt-3">Contáctame</a>
         </div>
         <div class="col-lg-6 text-center">
-          <img src="https://softwarewebsas.com/public/images/blog/dev.webp" class="img-fluid rounded-circle"
-            alt="Business Team">
+          <img src="https://media.licdn.com/dms/image/v2/C4D03AQExRFpo9HBAdQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1610532266626?e=2147483647&v=beta&t=eA-P-Yed5XWhzLoa-zwfS4HwOoCxZIT8X4OFNCbExDo" class="img-fluid rounded-circle" alt="Mi foto">
         </div>
       </div>
     </div>
+  </section>
 
-    <div class="b-example-divider"></div>
+  <div class="b-example-divider"></div>
 
     <!--Estos son los cards que contienen los servicios-->
-    <div class="container px-4 py-5" id="hanging-icons">
-      <h2 class="pb-2 border-bottom">Hanging icons</h2>
-      <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-        <div class="col d-flex align-items-start">
-          <div
-            class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <svg class="bi" width="1em" height="1em">
-              <use xlink:href="#toggles2" />
-            </svg>
-          </div>
-          <div>
-            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-              probably just keep going until we run out of words.</p>
-            <a href="#" class="btn btn-primary">
-              Primary button
-            </a>
-          </div>
+  <div class="container px-4 py-5" id="services">
+    <h2 class="pb-2 border-bottom" >Servicios</h2>
+    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+      <div class="col d-flex align-items-start">
+        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+          <svg class="bi" width="1em" height="1em">
+            <use xlink:href="#code-slash" />
+          </svg>
         </div>
-        <div class="col d-flex align-items-start">
-          <div
-            class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <svg class="bi" width="1em" height="1em">
-              <use xlink:href="#cpu-fill" />
-            </svg>
-          </div>
-          <div>
-            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-              probably just keep going until we run out of words.</p>
-            <a href="#" class="btn btn-primary">
-              Primary button
-            </a>
-          </div>
+        <div class="titleService">
+          <h3 class="fs-2 text-body-emphasis">Aplicaciones Multiplataforma</h3>
+          <p>Ofrezco servicios de desarrollo web personalizados, desde páginas estáticas hasta aplicaciones dinámicas, siempre con un enfoque en el rendimiento y la usabilidad.</p>
+          <a href="#contacto" class="btn btn-primary">Más información</a>
         </div>
-        <div class="col d-flex align-items-start">
-          <div
-            class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-            <svg class="bi" width="1em" height="1em">
-              <use xlink:href="#tools" />
-            </svg>
-          </div>
-          <div>
-            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-              probably just keep going until we run out of words.</p>
-            <a href="#" class="btn btn-primary">
-              Primary button
-            </a>
-          </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+          <svg class="bi" width="1em" height="1em">
+            <use xlink:href="#person-lines-fill" />
+          </svg>
+        </div>
+        <div class="titleService">
+          <h3 class="fs-2 text-body-emphasis">Consultoría</h3>
+          <p>Proporciono asesoramiento a quienes necesiten optimizar sus procesos tecnológicos o estratégicos.</p>
+          <a href="#contacto" class="btn btn-primary">Más información</a>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+          <svg class="bi" width="1em" height="1em">
+            <use xlink:href="#palette" />
+          </svg>
+        </div>
+        <div class="titleService">
+          <h3 class="fs-2 text-body-emphasis">Soluciones Informáticas</h3>
+          <p>Brindo servicios de ensamblaje, mantenimiento y reparación de computadoras, asegurando el máximo rendimiento y fiabilidad para hogares y empresas.</p>
+          <a href="#contacto" class="btn btn-primary">Más información</a>
         </div>
       </div>
     </div>
+  </div>
+
 
     <!--Este es el formulario-->
     <div class="form-wrapper">
       <form action="https://formspree.io/f/mpwqkaej" method="POST" class="form-container">
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" name="email" placeholder="name@example.com" required>
+          <input type="email" class="form-control" name="email" placeholder="Escribe tu nombre aquí" required>
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Mensaje</label>
-          <textarea class="form-control" name="message" rows="3" required></textarea>
+          <textarea class="form-control" name="Escribe tu mensaje aquí" rows="3" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
@@ -127,7 +115,7 @@
         <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
           <i class="bi bi-bootstrap-fill" style="font-size: 24px; color: white;"></i>
         </a>
-        <span style="text-decoration-color: white;">&copy; 2024 Company, Inc</span>
+        <span style="text-decoration-color: white;">&copy; 2024 Silver Tech</span>
       </div>
   
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
