--- a/index.html
+++ b/index.html
@@ -2,130 +2,134 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Silver Tech.</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Silver Tech.</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <!--Aqui empieza el navbar-->
-  <nav class="navbar navbar-expand-lg navbar-dark">
+<!--Aqui empieza el navbar-->
+<nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Saúl Briceño</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About Me</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://tublog.com" target="_blank">Blog</a></li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="#">Saúl Briceño</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">About Me</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://tublog.com" target="_blank">Blog</a></li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
-  <!--Aqui viene la seccion hero-->
-  <section class="hero-section text-center text-lg-start">
+<!--Aqui viene la seccion hero-->
+<section class="hero-section text-center text-lg-start">
     <div class="container" id="home">
-      <div class="row align-items-center">
-        <div class="col-lg-6">
-          <h1>Hola, soy Saúl</h1>
-          <p class="mt-3">Soy un programador. Apasionado por la tecnología, con experiencia en solucionar problemas mediante el software.</p>
-          <a href="#contacto" class="btn btn-custom mt-3">Contáctame</a>
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <h1>Hola, soy Saúl</h1>
+                <p class="mt-3">Soy un programador. Apasionado por la tecnología, con experiencia en solucionar
+                    problemas mediante el software.</p>
+                <a href="#contacto" class="btn btn-custom mt-3">Contáctame</a>
+            </div>
+            <div class="col-lg-6 text-center">
+                <img src="https://media.licdn.com/dms/image/v2/C4D03AQExRFpo9HBAdQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1610532266626?e=2147483647&v=beta&t=eA-P-Yed5XWhzLoa-zwfS4HwOoCxZIT8X4OFNCbExDo"
+                     class="img-fluid rounded-circle" alt="Mi foto">
+            </div>
         </div>
-        <div class="col-lg-6 text-center">
-          <img src="https://media.licdn.com/dms/image/v2/C4D03AQExRFpo9HBAdQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1610532266626?e=2147483647&v=beta&t=eA-P-Yed5XWhzLoa-zwfS4HwOoCxZIT8X4OFNCbExDo" class="img-fluid rounded-circle" alt="Mi foto">
-        </div>
-      </div>
     </div>
-  </section>
+</section>
 
-  <div class="b-example-divider"></div>
+<div class="b-example-divider"></div>
 
-    <!--Estos son los cards que contienen los servicios-->
-  <div class="container px-4 py-5" id="services">
-    <h2 class="pb-2 border-bottom" >Servicios</h2>
-    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-      <div class="col d-flex align-items-start">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em">
-            <use xlink:href="#code-slash" />
-          </svg>
+<!--Estos son los cards que contienen los servicios-->
+<div class="container-service">
+    <div class="container px-4 py-5" id="services">
+        <h2 class="pb-2 border-bottom">Servicios</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <div class="col d-flex align-items-start">
+                <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                    <i class="bi bi-globe"></i>
+                </div>
+                <div>
+                    <h3 class="fs-2 text-white">Aplicaciones</h3>
+                    <p>Ofrezco servicios de desarrollo de aplicaciones informáticas a medida, creando desde páginas estáticas hasta aplicaciones
+                        dinámicas, siempre enfocándome en un rendimiento óptimo, usabilidad y soluciones personalizadas
+                        para ti.</p>
+                    <a href="#contacto" class="btn btn-primary">Más información</a>
+                </div>
+            </div>
+            <div class="col d-flex align-items-start">
+                <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                    <i class="bi bi-briefcase"></i>
+                </div>
+                <div>
+                    <h3 class="fs-2 text-white">Consultoría</h3>
+                    <p>Brindo asesoramiento a empresas y profesionales que buscan optimizar sus procesos tecnológicos,
+                        mejorar su infraestructura o estrategias digitales, con soluciones personalizadas y eficientes
+                        para crecer.</p>
+                    <a href="#contacto" class="btn btn-primary">Más información</a>
+                </div>
+            </div>
+            <div class="col d-flex align-items-start">
+                <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                    <i class="bi bi-wrench-adjustable-circle-fill"></i>
+                </div>
+                <div>
+                    <h3 class="fs-2 text-white">Soluciones</h3>
+                    <p>Brindo servicios de ensamblaje, mantenimiento y reparación de computadoras, optimizando el
+                        rendimiento y garantizando la fiabilidad tanto para hogares como para empresas, asegurando
+                        calidad y eficiencia.SS</p>
+                    <a href="#contacto" class="btn btn-primary">Más información</a>
+                </div>
+            </div>
         </div>
-        <div class="titleService">
-          <h3 class="fs-2 text-body-emphasis">Aplicaciones Multiplataforma</h3>
-          <p>Ofrezco servicios de desarrollo web personalizados, desde páginas estáticas hasta aplicaciones dinámicas, siempre con un enfoque en el rendimiento y la usabilidad.</p>
-          <a href="#contacto" class="btn btn-primary">Más información</a>
-        </div>
-      </div>
-      <div class="col d-flex align-items-start">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em">
-            <use xlink:href="#person-lines-fill" />
-          </svg>
-        </div>
-        <div class="titleService">
-          <h3 class="fs-2 text-body-emphasis">Consultoría</h3>
-          <p>Proporciono asesoramiento a quienes necesiten optimizar sus procesos tecnológicos o estratégicos.</p>
-          <a href="#contacto" class="btn btn-primary">Más información</a>
-        </div>
-      </div>
-      <div class="col d-flex align-items-start">
-        <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-          <svg class="bi" width="1em" height="1em">
-            <use xlink:href="#palette" />
-          </svg>
-        </div>
-        <div class="titleService">
-          <h3 class="fs-2 text-body-emphasis">Soluciones Informáticas</h3>
-          <p>Brindo servicios de ensamblaje, mantenimiento y reparación de computadoras, asegurando el máximo rendimiento y fiabilidad para hogares y empresas.</p>
-          <a href="#contacto" class="btn btn-primary">Más información</a>
-        </div>
-      </div>
     </div>
-  </div>
+</div>
 
 
-    <!--Este es el formulario-->
-    <div class="form-wrapper">
-      <form action="https://formspree.io/f/mpwqkaej" method="POST" class="form-container">
+<!--Este es el formulario-->
+<div class="form-wrapper">
+    <form action="https://formspree.io/f/mpwqkaej" method="POST" class="form-container">
         <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" name="email" placeholder="Escribe tu nombre aquí" required>
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" class="form-control" name="email" placeholder="Escribe tu nombre aquí" required>
         </div>
         <div class="mb-3">
-          <label for="message" class="form-label">Mensaje</label>
-          <textarea class="form-control" name="Escribe tu mensaje aquí" rows="3" required></textarea>
+            <label for="message" class="form-label">Mensaje</label>
+            <textarea class="form-control" name="Escribe tu mensaje aquí" rows="3" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
-      </form>
-      
-    </div>
-  </section>
+    </form>
 
-  <!--Aqui empieza el footer-->
-  <div class="container">
+</div>
+</section>
+
+<!--Aqui empieza el footer-->
+<div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-          <i class="bi bi-bootstrap-fill" style="font-size: 24px; color: white;"></i>
-        </a>
-        <span style="text-decoration-color: white;">&copy; 2024 Silver Tech</span>
-      </div>
-  
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-twitter"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-instagram"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-facebook"></i></a></li>
-      </ul>
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+                <i class="bi bi-bootstrap-fill" style="font-size: 24px; color: white;"></i>
+            </a>
+            <span style="text-decoration-color: white;">&copy; 2024 Silver Tech</span>
+        </div>
+
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-twitter"></i></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-instagram"></i></a></li>
+            <li class="ms-3"><a class="text-body-secondary" href="#"><i class="bi bi-facebook"></i></a></li>
+        </ul>
     </footer>
-  </div>  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
